--- a/docs/authentication/social-connections/dropbox.mdx
+++ b/docs/authentication/social-connections/dropbox.mdx
@@ -19,7 +19,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a Dropbox account. To create one, [click here](https://www.dropbox.com/lp/developers).
 
 ## Configuring Dropbox social connection
@@ -33,7 +33,7 @@ First, you need to register a new OAuth Dropbox app at the [Dropbox App Console]
   alt="Creating a new application"
 />
 
-First you need to choose the API type, the App's type of access and to set a name for your new application. You also need to add the **OAuth Redirect URLs.** Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Dropbox. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **OAuth Redirect URIs** input and click create.
+First you need to choose the API type, the App's type of access and to set a name for your new application. You also need to add the **OAuth Redirect URLs.** Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable Dropbox. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **OAuth Redirect URIs** input and click create.
 
 Once all the above are complete, copy the **Client ID** and **Client Secret.** Go back to the Clerk Dashboard and paste them into the respective fields.
 
