--- a/docs/authentication/social-connections/facebook.mdx
+++ b/docs/authentication/social-connections/facebook.mdx
@@ -19,7 +19,7 @@ For production instances, you will need to create your own developer account wit
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a Facebook Developer account. To create one, consult the [Register as a Facebook developer](https://developers.facebook.com/docs/development/register) page.
 
 ## Configuring Facebook social connection
@@ -36,7 +36,7 @@ Once you have a OAuth client ID created, click on the newly created ID under **O
 
 ![Retrieving the App ID and App Secret](/docs/images/authentication-providers/facebook/33456604106d3478e0fd6b583bdde7c4f5563641-1467x969.png)
 
-Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Facebook. In the modal that opened, ensure **Use custom credentials** is enabled and paste the values you obtained during the previous step.
+Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable Facebook. In the modal that opened, ensure **Use custom credentials** is enabled and paste the values you obtained during the previous step.
 
 ![Adding the valid OAuth Redirect URI](/docs/images/authentication-providers/facebook/c0be80ce8fed2b4d14d04fcbf56318b80295093d-1467x989.png)
 
