--- a/docs/authentication/social-connections/github.mdx
+++ b/docs/authentication/social-connections/github.mdx
@@ -19,7 +19,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a GitHub account. To create one, [click here](https://github.com/signup).
 
 ## Configuring GitHub social connection
@@ -28,7 +28,7 @@ First, you need to register a new OAuth GitHub app. Follow the official GitHub i
 
 ![Registering an OAuth GitHub app](/docs/images/authentication-providers/github/ff83ad81ca491cf17e5a755376fae9c88148ce7c-1395x799.png)
 
-Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable GitHub. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Go back to the GitHub panel, paste the value into the **Authorization callback URL** field and complete the registration.
+Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable GitHub. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Go back to the GitHub panel, paste the value into the **Authorization callback URL** field and complete the registration.
 
 Once registration is complete, you'll get redirected to project's admin panel. Click the **Generate a new client secret** button to get your new client secret. Then, copy the **Client ID** and **Client secret.** Go back to the Clerk Dashboard and paste them into the respective fields.
 
