--- a/docs/authentication/social-connections/linear.mdx
+++ b/docs/authentication/social-connections/linear.mdx
@@ -19,14 +19,14 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a Linear account. To create one, [click here](https://linear.app).
 
 ## Configuring Linear social connection
 
 First, you need to create a new OAuth Linear app. Navigate on your **Settings > Account > API > OAuth applications** and click on **Create new**. On the modal that pops up, enter all the necessary info for your new app such as the name, the logo etc. 
 
-For the Callback URLs field, go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Linear. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste this value in the Callback URLs field of your Linear application.
+For the Callback URLs field, go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable Linear. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste this value in the Callback URLs field of your Linear application.
 
 <Images
   width={1399}
