--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -29,7 +29,7 @@ The easiest way to add social connections is by using Clerk's [prebuilt componen
 
 ## Configuration
 
-For development instances, Clerk uses pre-configured shared OAuth credentials and redirect URIs to make the development flow as smooth as possible. This means that you can enable any provider without additional configuration. Simply navigate to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) in your Clerk Dashboard and toggle on the providers you want to use.
+For development instances, Clerk uses pre-configured shared OAuth credentials and redirect URIs to make the development flow as smooth as possible. This means that you can enable any provider without additional configuration. Simply navigate to the [Social Connections page](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) in your Clerk Dashboard and toggle on the providers you want to use.
 
 <Images
   width={3024}
