--- a/docs/authentication/social-connections/tiktok.mdx
+++ b/docs/authentication/social-connections/tiktok.mdx
@@ -19,7 +19,7 @@ For production instances, you will need to create your own developer account wit
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a TikTok Developer account. To create one, visit the [TikTok for developers](https://developers.tiktok.com/) page and click on Login ➜ Sign Up
 
 ## Configuring TikTok social connection
@@ -30,7 +30,7 @@ First, you need to create a new TikTok app. Go to the [TikTok for developers](ht
 
 Add an icon and a name for your new project and hit **Start**.
 
-You'll get redirected to the app creation form. Notice that you need to fill the **Callback URL** and **Redirect domain** fields. Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable TikTok. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**.
+You'll get redirected to the app creation form. Notice that you need to fill the **Callback URL** and **Redirect domain** fields. Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable TikTok. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**.
 
 ![Filling in the Callback URL and Redirect Domain fields](/docs/images/authentication-providers/tiktok/135491407e1afeea187644e4450fb77bb659d907-1489x964.png)
 
