--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -11,7 +11,7 @@ Clerk supports password authentication, which allows users to sign up and sign i
 
 ### Enable password and email
 
-In the Clerk dashboard, you will need to enable both email and password as a sign-in and sign-up method. Navigate to the [Email, Phone, and Username](https://dashboard.clerk.dev/last-active?path=user-authentication/email-phone-username) tab of the **User & Authentication** section in the Clerk Dashboard. Toggle on **Email address** and **Password**.
+In the Clerk dashboard, you will need to enable both email and password as a sign-in and sign-up method. Navigate to the [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab of the **User & Authentication** section in the Clerk Dashboard. Toggle on **Email address** and **Password**.
 
 <Images
   width={3024}
