--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -7,7 +7,7 @@ description: The <SignIn /> component renders a UI for signing in users. The fun
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
 
-The [`<SignIn />`][signin-ref] component renders a UI for signing in users. The functionality of the [`<SignIn />`][signin-ref] component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your [`<SignIn />`][signin-ref] component by passing additional properties at the time of rendering.
+The [`<SignIn />`][signin-ref] component renders a UI for signing in users. The functionality of the [`<SignIn />`][signin-ref] component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com). You can further customize your [`<SignIn />`][signin-ref] component by passing additional properties at the time of rendering.
 
 > All of these are methods on [an instance of the `Clerk` class](/docs/references/javascript/clerk/clerk).
 
