--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -7,7 +7,7 @@ description: The <SignUp /> component renders a UI for signing up users. The fun
 
 <Images width={496} height={780} src="/docs/images/ui-components/component-sign_up.svg" alt="Sign up component example" />
 
-The [`<SignUp />`][signup-ref] component renders a UI for signing up users. The functionality of the [`<SignUp />`][signup-ref] component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your [`<SignUp />`][signup-ref] component by passing additional properties at the time of rendering.
+The [`<SignUp />`][signup-ref] component renders a UI for signing up users. The functionality of the [`<SignUp />`][signup-ref] component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com). You can further customize your [`<SignUp />`][signup-ref] component by passing additional properties at the time of rendering.
 
 > All of these are methods on [an instance of the `Clerk` class](/docs/references/javascript/clerk/clerk).
 
