--- a/docs/authentication/social-connections/box.mdx
+++ b/docs/authentication/social-connections/box.mdx
@@ -19,7 +19,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a Box developer account. To create one, [click here](https://developer.box.com/).
 
 ## Configuring Box social connection
@@ -35,7 +35,7 @@ You need to choose an app name and then click **Create application**.
   alt="Adding a name and creating the application"
 />
 
-Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Box. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
+Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable Box. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
 
 <Images
   width={1916}
