--- a/docs/authentication/social-connections/gitlab.mdx
+++ b/docs/authentication/social-connections/gitlab.mdx
@@ -19,7 +19,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a GitLab account. To create one, [click here](https://gitlab.com/users/sign_up).
 
 ## Configuring GitLab social connection
@@ -28,7 +28,7 @@ First, you need to register a new OAuth GitLab app. Follow the official GitLab i
 
 ![Creating an OAuth GitLab app](/docs/images/authentication-providers/gitlab/7e67b1cb88c1df509cac722d6a6b2d7c624686f8-1919x840.png)
 
-You need to add a name for your new application and the **Redirect URI**. Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable GitLab. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Go back to the GitLab panel, paste the value into the **Redirect URI**, select any scopes that would you like your users to provide and save the application.
+You need to add a name for your new application and the **Redirect URI**. Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable GitLab. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Go back to the GitLab panel, paste the value into the **Redirect URI**, select any scopes that would you like your users to provide and save the application.
 
 Once creation is complete, you'll get redirected to application's panel. Copy the **Application ID** and **Secret.** Go back to the Clerk Dashboard and paste them into the respective fields.
 
