--- a/docs/authentication/social-connections/google.mdx
+++ b/docs/authentication/social-connections/google.mdx
@@ -19,12 +19,12 @@ For production instances, you will need to create your own developer account wit
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a Google Developer account. To create one, visit the [Google Cloud console](https://console.developers.google.com/).
 
 ## Configuring Google social connection
 
-First, go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) of your Clerk dashboard. From the list of OAuth vendors, enable Google. In the modal that opened, make sure **Use custom credentials** is enabled, and copy the value of the **Authorized redirect URI** field (you will have to paste this in the Google Console in a bit). Leave that window open as you will need to fill in the Client ID and Client Secret values that you will retrieve from the Google Cloud Platform console.
+First, go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) of your Clerk dashboard. From the list of OAuth vendors, enable Google. In the modal that opened, make sure **Use custom credentials** is enabled, and copy the value of the **Authorized redirect URI** field (you will have to paste this in the Google Console in a bit). Leave that window open as you will need to fill in the Client ID and Client Secret values that you will retrieve from the Google Cloud Platform console.
 
 In a new window, go to your Google Cloud Platform console. Select your Google project (step 1 in the screenshot) and enable OAuth 2.0 support by following the official instructions on [how to set up up an OAuth 2.0 application](https://support.google.com/cloud/answer/6158849?hl=en). In the **Authorized redirect URIs** setting, paste the value you copied from Clerk's Dashboard (see previous paragraph).
 
@@ -36,7 +36,7 @@ Once you have an OAuth client ID created, click on the newly created ID under **
 
 Go back to your Clerk instance's Dashboard and in the modal that should be opened (see beginning of this section), paste the **Client ID** and **Client Secret** values you obtained during the previous step.
 
-Optionally, you can also set additional OAuth scopes that your application might need, according to your use case. More information about this feature can be found [here](https://clerk.dev/docs/how-to/social-login-oauth), while the list of Google's available scopes can be found [here](https://developers.google.com/identity/protocols/oauth2/scopes).
+Optionally, you can also set additional OAuth scopes that your application might need, according to your use case. More information about this feature can be found [here](https://clerk.com/docs/how-to/social-login-oauth), while the list of Google's available scopes can be found [here](https://developers.google.com/identity/protocols/oauth2/scopes).
 
 As a quick recap, if you followed this guide, you should have done the following:
 
