--- a/docs/authentication/social-connections/line.mdx
+++ b/docs/authentication/social-connections/line.mdx
@@ -21,7 +21,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a LINE developer account. To create one, [click here](https://developers.line.biz/en/).
 
 ## Configuring LINE social connection
@@ -39,7 +39,7 @@ The next step is to create a new **LINE Login channel**. You will have to select
 
 In the next screen, after the app has been created, you will find the **Basic settings** of the application. If you want to also make email address available for your application, you will have to apply for **Email address permission** in the bottom of your app's **Basic settings**.
 
-You also need to add the **OAuth Redirect URLs.** Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) of your Clerk Dashboard and enable LINE. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **LINE login → Callback URL** input.
+You also need to add the **OAuth Redirect URLs.** Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) of your Clerk Dashboard and enable LINE. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **LINE login → Callback URL** input.
 
 Once all the above are complete, copy the **Channel ID** and **Channel secret.** Go back to the Clerk Dashboard and paste them into the respective fields.
 
