--- a/docs/authentication/social-connections/spotify.mdx
+++ b/docs/authentication/social-connections/spotify.mdx
@@ -11,7 +11,7 @@ Clerk does not currently support preconfigured shared OAuth credentials for Spot
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a Spotify developer account. To create one, [click here](https://developer.spotify.com/).
 
 ## Configuration
@@ -42,7 +42,7 @@ Once redirected to the application creation form, you need to set an **App name*
 	
 You can retrieve the **Redirect URI** from the Clerk Dashboard. But first, you need to enable Spotify as a social connection for your Clerk application. 
 	
-Navigate to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) in your Clerk Dashboard. Toggle on the Spotify option. 
+Navigate to the [Social Connections page](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) in your Clerk Dashboard. Toggle on the Spotify option. 
 
 <Images
   width={3024}
@@ -78,7 +78,7 @@ Once your Spotify app is created, you'll be redirected to the app dashboard. Fro
 Copy the **Client ID** and **Client Secret**. Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields. 
 
 <Callout type="info">
-  If the modal or page is not still open, navigate to the [Social Connections](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) page in the Clerk Dashboard and click on the settings cog icon next to the Spotify option. You can now paste the **Client ID** and **Client Secret** into their respective fields.
+  If the modal or page is not still open, navigate to the [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) page in the Clerk Dashboard and click on the settings cog icon next to the Spotify option. You can now paste the **Client ID** and **Client Secret** into their respective fields.
 </Callout>
 
 <Images
