--- a/docs/authentication/social-connections/xero.mdx
+++ b/docs/authentication/social-connections/xero.mdx
@@ -19,7 +19,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
 - You need to have a Xero developer account. To create one, [click here](https://developer.xero.com/).
 
 ## Configuring Xero social connection
@@ -33,7 +33,7 @@ First, you need to create a new OAuth2 Xero app. Click New App and fill all the 
   alt="Creating a new application"
 />
 
-Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Xero. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
+Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable Xero. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
 
 <Images
   width={1909}
