--- a/docs/components/customization/layout.mdx
+++ b/docs/components/customization/layout.mdx
@@ -21,7 +21,7 @@ import { ClerkProvider } from '@clerk/nextjs';
     layout: {
       socialButtonsPlacement: 'bottom',
       socialButtonsVariant: 'iconButton',
-      termsPageUrl: 'https://clerk.dev/terms'
+      termsPageUrl: 'https://clerk.com/terms'
     }
   }}
 >
